@@ -7,4 +7,114 @@
  */
 
 // Language keys
+__('Terrible', 'geodirectory');
+__('Poor', 'geodirectory');
+__('Average', 'geodirectory');
+__('Very Good', 'geodirectory');
+__('Excellent', 'geodirectory');
+__('overall', 'geodirectory');
+__('Cost', 'geodirectory');
+__('super expensive', 'geodirectory');
+__('expensive', 'geodirectory');
+__('average', 'geodirectory');
+__('good value', 'geodirectory');
+__('cheap', 'geodirectory');
+__('Cost of service', 'geodirectory');
+__('Category', 'geodirectory');
+__('Select listing category from here. Select at least one category', 'geodirectory');
+__('Address', 'geodirectory');
+__('Please enter listing address. eg. : <b>230 Vine Street</b>', 'geodirectory');
+__('Address fields are required', 'geodirectory');
+__('Time', 'geodirectory');
+__('Enter Business or Listing Timing Information.<br/>eg. : 10.00 am to 6 pm every day', 'geodirectory');
+__('Phone', 'geodirectory');
+__('You can enter phone number,cell phone number etc.', 'geodirectory');
+__('Email', 'geodirectory');
+__('You can enter your business or listing email.', 'geodirectory');
+__('Website', 'geodirectory');
+__('You can enter your business or listing website.', 'geodirectory');
+__('Twitter', 'geodirectory');
+__('You can enter your business or listing twitter url.', 'geodirectory');
+__('Facebook', 'geodirectory');
+__('You can enter your business or listing facebook url.', 'geodirectory');
+__('Video', 'geodirectory');
+__('Add video code here, YouTube etc.', 'geodirectory');
+__('Special Offers', 'geodirectory');
+__('Note: List out any special offers (optional)', 'geodirectory');
+__('Please enter listing address. eg. : 230 Vine Street', 'geodirectory');
+__('Facebook test2', 'geodirectory');
+__('Facebook test', 'geodirectory');
+__('Accommodates', 'geodirectory');
+__('test_time', 'geodirectory');
+__('est', 'geodirectory');
+__('newemail', 'geodirectory');
+__('new yo', 'geodirectory');
+__('twitter_feed', 'geodirectory');
+__('email2', 'geodirectory');
+__('url _test', 'geodirectory');
+__('urltest2', 'geodirectory');
+__('number test', 'geodirectory');
+__('xxx', 'geodirectory');
+__('singleselect', 'geodirectory');
+__('test6', 'geodirectory');
+__('test7', 'geodirectory');
+__('noomber', 'geodirectory');
+__('Coke', 'geodirectory');
+__('multitest', 'geodirectory');
+__('new2', 'geodirectory');
+__('Title', 'geodirectory');
+__('Title down', 'geodirectory');
+__('Random', 'geodirectory');
+__('Rating', 'geodirectory');
+__('ASC', 'geodirectory');
+__('DESC', 'geodirectory');
+__('Review', 'geodirectory');
+__('com ASC', 'geodirectory');
+__('com DESC', 'geodirectory');
+__('Places', 'geodirectory');
+__('Place', 'geodirectory');
+__('Add New', 'geodirectory');
+__('Add New Place', 'geodirectory');
+__('Edit Place', 'geodirectory');
+__('New Place', 'geodirectory');
+__('View Place', 'geodirectory');
+__('Search Places', 'geodirectory');
+__('No Place Found', 'geodirectory');
+__('No Place Found In Trash', 'geodirectory');
+__('Overview', 'geodirectory');
+__('Place post type.', 'geodirectory');
+__('Jobs', 'geodirectory');
+__('Jobx', 'geodirectory');
+__('Add New Job', 'geodirectory');
+__('Edit Job', 'geodirectory');
+__('New Job', 'geodirectory');
+__('View Job', 'geodirectory');
+__('Search Jobs', 'geodirectory');
+__('No Job Found', 'geodirectory');
+__('No Job Found In Trash', 'geodirectory');
+__('Details', 'geodirectory');
+__('Events', 'geodirectory');
+__('Event', 'geodirectory');
+__('Add New Event', 'geodirectory');
+__('Edit Event', 'geodirectory');
+__('New Event', 'geodirectory');
+__('View Event', 'geodirectory');
+__('Search Events', 'geodirectory');
+__('No Event Found', 'geodirectory');
+__('No Event Found In Trash', 'geodirectory');
+__('Event post type.', 'geodirectory');
+__('Post Submitted Successfully', 'geodirectory');
+__('<p>Dear Admin,</p><p>A new  listing has been published [#listing_link#]. This email is just for your information.</p><br><p>[#site_name#]</p>', 'geodirectory');
+__('<p>Dear [#client_name#],</p><p>You submitted the below listing information. This email is just for your information.</p><p>[#listing_link#]</p><br><p>Thank you for your contribution.</p><p>[#site_name#]</p>', 'geodirectory');
+__('[#site_name#] - Your new password', 'geodirectory');
+__('<p>Dear [#client_name#],<p><p>You requested a new password for [#site_name_url#]</p><p>[#login_details#]</p><p>You can login here: [#login_url#]</p><p>Thank you,<br /><br />[#site_name_url#].</p>', 'geodirectory');
+__('Your Log In Details', 'geodirectory');
+__('<p>Dear [#client_name#],</p><p>You can log in  with the following information:</p><p>[#login_details#]</p><p>You can login here: [#login_url#]</p><p>Thank you,<br /><br />[#site_name_url#].</p>', 'geodirectory');
+__('Listing Published Successfully', 'geodirectory');
+__('<p>Dear [#client_name#],</p><p>Your listing [#listing_link#] has been published. This email is just for your information.</p><p>[#listing_link#]</p><br><p>Thank you for your contribution.</p><p>[#site_name#]</p>', 'geodirectory');
+__('[#from_name#] thought you might be interested in..', 'geodirectory');
+__('<p>Dear [#to_name#],<p><p>Your friend has sent you a message from <b>[#site_name#]</b> </p><p>===============================</p><p><b>Subject : [#subject#]</b></p><p>[#comments#] [#listing_link#]</p><p>===============================</p><p>Thank you,<br /><br />[#site_name#].</p>', 'geodirectory');
+__('Website Enquiry', 'geodirectory');
+__('<p>Dear [#to_name#],<p><p>An enquiry has been sent from <b>[#listing_link#]</b></p><p>===============================</p><p>[#comments#]</p><p>===============================</p><p>Thank you,<br /><br />[#site_name_url#].</p>', 'geodirectory');
+__('<p>Thank you, your information has been successfully received.</p><p><a href="[#submited_information_link#]" >View your submitted information &raquo;</a></p><p>Thank you for visiting us at [#site_name#].</p>', 'geodirectory');
 ?>
