@@ -18,6 +18,7 @@ Font awesome updated to 4.5.0 - CHANGED
 New filter added to use group by clause in map marker query - ADDED
 Custom field option values should be translatable - FIXED
 Permalink pages settings saving on a different wpml language breaks pages settings - FIXED
+Added filter to be able to search listing results map json - ADDED
 
 v1.5.6
 In add listing form sub-categories are no longer showing in hierarchy for checkbox display type - FIXED
